# equation_scribe

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.cfg
detector/: __init__.py  data_prep.py  data_prep_coco.py  detector.yaml  make_pairs.py  preprocess.py  render_latex.py  requirements.txt  synthetic_coco.py  tiling.py
detector/tests/: conftest.py  test_split.py  test_tiling.py
equation_scribe/: __init__.py  autodetect_equations.py  detect.py  pdf_ingest.py  profile_index.py  store.py  ui_gradio.py  validate.py
equation_scribe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
equation_scribe/detector/: IM2LATEX_TRAINING.md  README.md  __init__.py  detector.yaml  inference.py  make_pairs.py  render_latex.py  split_coco_by_paper.py  synctex_extractor.py  synthetic_coco.py  tiling.py  train_detector.sh
equation_scribe/detector/data/annotations/: instances_all.json
equation_scribe/detector/tests/: test_preprocess.py  test_split.py  test_tiling.py
notebooks/.ipynb_checkpoints/: spiral0-checkpoint.ipynb
runs/detect/eq_detector_quick/: args.yaml
runs/detect/eq_detector_quick2/: args.yaml
runs/detect/eq_detector_quick3/: args.yaml
runs/detect/eq_detector_quick4/: args.yaml
runs/detect/eq_detector_quick5/: args.yaml
runs/detect/eq_detector_quick6/: args.yaml
tests/: test_detect.py  test_pdf_ingest.py  test_validate.py  test_writeindex.py
tools/: check_files_exist.py  check_ultralytics_dataset.py  run_demo.ps1  safe_import_rewriter.py
